--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <!-- Top section: Rotating ads -->
     <div id="top-ad-container">
         <div id="top-ad-display"></div>
+        <div id="ad-progress-bar">
+            <div id="ad-progress-fill"></div>
+        </div>
     </div>
 
     <!-- Main two-column layout -->
